--- a/source/index.html
+++ b/source/index.html
@@ -265,8 +265,10 @@
 					<p class="page-footer__text"></p>
 				</div>
 			</div>
-			<div class="page-footer__low-line">
-				<p class="copyright">© <span class="copyright__year">2014</span> SURFHOUSE. All rights reserved - Designed by
+			<div class="page-footer__low-line ">
+				<p class="copyright">©
+					<span class="copyright__year">2014</span>
+					SURFHOUSE. All rights reserved - Designed by
 					<a class="copyright__link" href="" >theuncreativelab.com</a></p>
 				<ul class="social-links__list">
 					<li class="socal-links__item">
